<resources>
    <string name="app_name">Horizons</string>

    --strings for the login/signup screen

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="confirm">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="back">Return to Login</string>

    --strings for the main menu screen, SelectActivity
    <string name="myalbums">My Albums</string>
    <string name="recommend">Recommend an album</string>
    <string name="title">Welcome!</string>
    <string name="logout">Logout</string>
    <string name="searchHint">Search Album or Artist</string>
    <string name="search">Search</string>

    --row_album strings
    <string name="artist">Circa Survive</string>
    <string name="release_title">Juturna</string>
    <string name="label">Equal Vision Records</string>
    <string name="genre">Rock</string>
    <string name="style">Emo</string>
    <string name="country">US</string>
    <string name="year">2005</string>


</resources>